--- a/flashcards_main/templates/flashcards_main/groups.html
+++ b/flashcards_main/templates/flashcards_main/groups.html
@@ -23,6 +23,9 @@
             <div class="col-md-4">
                 <div class="group-block col-md-12">
                     <div class="group-header row">
+                        <a href="javascript: deleteGroup({{ group.id }})" class="col-md-1 col-sm-1 pull-right">
+                            <h5><i class="glyphicon glyphicon-trash"></i></h5>
+                        </a>
                     </div>
                     <a class="" href="/groups">
                         <div class="group-body text-center">
@@ -78,6 +81,28 @@
     </div>
 </div>
 <!-- Add Group Modal ends here -->
+
+<!--  Delete Group Confirmation Modal starts here -->
+<div class="modal fade" id="deleteGroupConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteGroupConfirmationLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="teamConfirmationLabel">Confirmation</h4>
+            </div>
+            <div class="modal-body">
+                <p> Are you sure you want to delete this group?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary" id="deleteGroupConfirmationButton">Yes, Continue</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Delete Group Confirmation Modal ends here -->
 {% endblock %}
 
 
