--- a/flashcards_main/templates/flashcards_main/groups.html
+++ b/flashcards_main/templates/flashcards_main/groups.html
@@ -26,6 +26,9 @@
                         <a href="javascript: deleteGroup({{ group.id }})" class="col-md-1 col-sm-1 pull-right">
                             <h5><i class="glyphicon glyphicon-trash"></i></h5>
                         </a>
+                        <a href="javascript: editGroup({{ group.id }})" class="col-md-1 col-sm-1 pull-right">
+                            <h5><i class="glyphicon glyphicon-pencil"></i></h5>
+                        </a>
                     </div>
                     <a class="" href="/groups">
                         <div class="group-body text-center">
@@ -90,10 +93,10 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="teamConfirmationLabel">Confirmation</h4>
+                <h4 class="modal-title" id="teamConfirmationLabel">Delete Confirmation</h4>
             </div>
             <div class="modal-body">
-                <p> Are you sure you want to delete this group?</p>
+                <p> Are you sure you want to delete this flashcard group?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
@@ -103,6 +106,34 @@
     </div>
 </div>
 <!-- Delete Group Confirmation Modal ends here -->
+
+<!-- Edit Group Modal starts here -->
+<div class="modal fade" id="editGroupModal" tabindex="-1" role="dialog" aria-labelledby="editGroupModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editGroupModalLabel">Edit Flashcard Group</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="groupName" class="form-control-label">Name:</label>
+                        <input type="text" class="form-control" id="editedGroupName" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button id="editGroupButton" type="button" class="btn btn-primary">Edit Group</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Edit Group Modal ends here -->
 {% endblock %}
 
 
