--- a/flashcards_main/templates/flashcards_main/groups.html
+++ b/flashcards_main/templates/flashcards_main/groups.html
@@ -30,7 +30,7 @@
                             <h5><i class="glyphicon glyphicon-pencil"></i></h5>
                         </a>
                     </div>
-                    <a class="" href="/groups">
+                    <a href="/groups">
                         <div class="group-body text-center">
                             <i class="fa fa-3x fa-book"></i>
                             <h3><span>{{ group.name }}</span></h3>
