--- a/flashcards_main/templates/flashcards_main/groups.html
+++ b/flashcards_main/templates/flashcards_main/groups.html
@@ -93,7 +93,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="teamConfirmationLabel">Delete Confirmation</h4>
+                <h4 class="modal-title" id="deleteGroupConfirmationLabel">Delete Confirmation</h4>
             </div>
             <div class="modal-body">
                 <p> Are you sure you want to delete this flashcard group?</p>
@@ -121,7 +121,7 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="groupName" class="form-control-label">Name:</label>
+                        <label for="editedGroupName" class="form-control-label">Name:</label>
                         <input type="text" class="form-control" id="editedGroupName" required>
                     </div>
                 </form>
