--- a/flashcards_main/templates/flashcards_main/decks.html
+++ b/flashcards_main/templates/flashcards_main/decks.html
@@ -30,7 +30,7 @@
                             <h5><i class="glyphicon glyphicon-pencil"></i></h5>
                         </a>
                     </div>
-                    <a href="#">
+                    <a href="{{ deck.id }}/cards">
                         <div class="deck-body text-center">
                             <i class="fa fa-3x fa-align-justify"></i>
                             <h3><span>{{ deck.name }}</span></h3>
