Add background images to pages

--- a/flashcards_main/static/flashcards_main/css/style.css
+++ b/flashcards_main/static/flashcards_main/css/style.css
@@ -1,9 +1,10 @@
 body {
     padding: 0px;
+    background-image: url('../images/background2.jpg');
 }
 
 .header {
-    background-color: red;
+    background-image: url('../images/background.png');
     padding-top: 3%;
     padding-bottom: 1%;
 }
